tests/neg/magic-offset-header-a.check
-- [E007] Type Mismatch Error: tests/neg/magic-offset-header-a.scala:6:19 ----------------------------------------------
1 |def test1(): Int = "无穷"  // error
  |                   ^^^^
  |                   Found:    ("无穷" : String)
  |                   Required: Int
  |
  | longer explanation available when compiling with `-explain`
